<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title"
        android:text="@string/register_place_title_choose_images"
        tools:ignore="MissingConstraints"
        style="@style/titles"
        />

    <TextView
        android:id="@+id/informative_text"
        android:text="@string/register_place_general_text_choose_images"
        android:layout_marginTop="12sp"
        android:textAlignment="center"
        style="@style/informative_text"
        />

    <ImageView
        android:id="@+id/choose_img"
        android:layout_width="170sp"
        android:layout_height="170sp"
        android:background="@drawable/form__register_circle_button"
        android:src="@drawable/gallery_image"
        android:radius="10sp"
        android:layout_gravity="center"
        android:layout_marginTop="80sp"
        android:scaleType="center"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_place_choose_images"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="25sp"
        />

</LinearLayout>