<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="35dp"
    android:paddingTop="30dp">


    <TextView
        android:id="@+id/txt_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_name"
        tools:ignore="MissingConstraints"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:background="@drawable/form_inputs_style"/>

    <TextView
        android:id="@+id/txt_last_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_last_name"
        tools:ignore="MissingConstraints"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/user_last_names"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:background="@drawable/form_inputs_style"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_email"
        tools:ignore="MissingConstraints"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:background="@drawable/form_inputs_style"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/txt_user_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_username"
        tools:ignore="MissingConstraints"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/user_username"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:background="@drawable/form_inputs_style"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/txt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_pass"
        tools:ignore="MissingConstraints"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:background="@drawable/form_inputs_style"/>



</LinearLayout>