<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.unilocal.RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_title_register"
        android:textColor="@color/black"
        android:textSize="33dp"
        android:textStyle="bold"
        android:paddingLeft="50dp"
        android:layout_marginTop="100dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/we_want_know_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_want_know_you"
        android:textSize="20dp"
        android:layout_marginBottom="25dp"
        tools:ignore="MissingConstraints"
        android:paddingLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/main_title"/>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/form_pager"
        android:layout_width="320dp"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:elevation="30dp"
        android:background="@drawable/form_register_style"
        >


    </androidx.viewpager.widget.ViewPager>

    <ImageView
        android:id="@+id/prueba"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/form__register_circle_button" />
    <Button
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_next"
        android:layout_gravity="end"
        android:textSize="16dp"
        android:layout_marginRight="47dp"
        android:layout_marginTop="0dp"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/app_color"
        android:background="@drawable/border_style"
        android:textColor="@color/white"
        />

</LinearLayout>